<resources>
    <string name="app_name">MyTelkomAkses</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="gruppasang">Team Pasang Baru</string>
    <string name="grupgangguan">Team Gangguan</string>
    <string name="Order_Gangguan">Print Gangguan</string>
    <string name="Order_Pasang">Print Pasang Baru</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="product_name">Nama</string>
    <string name="SC">SC</string>
    <string name="Nama">Nama</string>
    <string name="Alamat">Alamat</string>
    <string name="Kotak">Kotak</string>
    <string name="NCLI">NCLI</string>
    <string name="NDEM">NDEM</string>
    <string name="Alpro_name">Alpro_name</string>
    <string name="inputemail">Masukkan Email</string>
    <string name="inputpass">Masukkan Password</string>
    <string name="logout">Logout</string>
    <string name="jenis">Jenis Order</string>
    <string-array name="Pekerjaan">
        <item>Pasang Baru</item>
        <item>Gangguan</item>
    </string-array>
    <string name="title_activity_maps">Map</string>


</resources>
