<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailGrupOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="No Tiket"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showtotik"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/SC"
            android:textAlignment="viewStart"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Nama"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shownama"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Nama"
            android:textAlignment="viewStart"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Alamat"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showalamat"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Alamat"
            android:textAlignment="viewStart"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Kotak"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showkontak"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Kotak"
            android:textAlignment="viewStart"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Jenis Gangguan"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showjenisgg"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/NCLI"
            android:textAlignment="viewStart"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No Internet"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shownoin"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/NDEM"
            android:textAlignment="viewStart"
            android:textStyle="bold" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Status"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showstatus"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Alpro_name"
            android:textAlignment="viewStart"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/detail_foto_bukti"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/kerjakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Kerjakan" />

        <Button
            android:id="@+id/selesai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Kirim bukti" />

    </LinearLayout>


</LinearLayout>