<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Tiket"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/enter_tiket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Internet"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/enter_internet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nama"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/enter_namapel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Alamat"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/enter_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kotak"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/enter_kontak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jenis Gangguan"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/enter_jenisgg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jenis"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/enter_gruporder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jenis"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:id="@+id/enter_grupteamteknisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/brown_border"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/cardview_dark_background"
                android:textSize="17dp" />

            <Button
                android:id="@+id/btn_simpan_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="SIMPAN" />

            <Button
                android:id="@+id/btn_reset_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="RESET" />
        </LinearLayout>

    </ScrollView>



</RelativeLayout>